# arbitrage_detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/detector/: arbitrage_detector.cpp  arbitrage_detector.h
src/fetcher/: binance_fetcher.cpp  coinbase_fetcher.cpp  fetcher.h
src/shared/: config.h  types.h
src/storage/: price_storage.cpp  price_storage.h
